# sphinx-theme-ref

./: .gitignore  .gitmodules  ARCHITECTURE.md  Makefile  Pipfile  README.md  configure  configure.ac  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
src/sphinx_theme_ref/: __init__.py  layout.html  theme.conf  theme.toml
src/sphinx_theme_ref/assets/: .gitignore
src/sphinx_victorykit_theme/: __init__.py  main.js
support/: conf.py  index.rst
