[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm[toml]"
]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-theme-ref"
description = "Tiara's Sphinx documentation theme reference"
authors = [
    { name = "Tiara Rodney", email = "tiara.rodney@administratrix.de" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Web Environment",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "sphinx >= 8.0,<9.0",
]
dynamic = ["version"]
requires-python = ">=3.8"

[project.entry-points."sphinx.html_themes"]
sphinx_theme_ref = "sphinx_theme_ref"

[project.urls]
Bitbucket = "https://bitbucket.org/tiaracodes/sphinx-theme-ref"
GitHub = "https://github.com/oxbqkwwxfrqccwtg/sphinx-theme-ref"

[tool.mypy]
strict = true

[tool.autopep8]
max_line_length = 80
aggressive = 3
recursive = true
in-place = true

[tool.setuptools_scm]

