[metadata]
name = sphinx-victorykit-theme
url = https://bitbucket.org/victorykit/sphinx_victorykit_theme
license = UNLICENSED
author = Tiara Rodney
author_email = tiara@h1d3.23d080rla94we2beocz4.xyz
description = victory-k.it theme for Sphinx
long_description = file: README.rst
project_urls = 
	Source Code = https://bitbucket.org/victorykit/sphinx-victorykit-theme
	Issue Tracker = https://bitbucket.org/victorykit/sphinx-victorykit-theme/issues
classifiers = 
	Framework :: Sphinx
	Framework :: Sphinx :: Theme
	Development Status :: 5 - Production/Stable
	License :: Other/Proprietary License
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Operating System :: OS Independent
	Topic :: Documentation
	Topic :: Software Development :: Documentation

[options]
##include_package_data = True
zip_safe = true
#package_dir = 
#	=src
packages = find:
python_requires = >=3.7
install_requires = 
	sphinx >=5,<8
	docutils <0.21
test_suite = test
tests_require = 
	pytest

[options.packages.find]
where = src

[options.extras_require]
dev = 
	sphinxcontrib-httpdomain
	wheel
    sphinx-autobuild

[options.entry_points]
sphinx.html_themes = 
	victorykit_theme = sphinx_victorykit_theme

[options.package_data]
sphinx_victorykit_theme = 
#	theme.conf
#	*.html
#	static/css/*.css
#	static/css/fonts/*.*
#	static/js/*.js
#    ../../build/static/*.css
#    ../../build/static/*.js



[bdist_wheel]
universal = 1

[extract_messages]
mapping_file = babel.cfg
output_file = sphinx_victorykit_theme/locale/sphinx.pot
keywords = _ l_ lazy_gettext
add_comments = Translators:

[init_catalog]
domain = sphinx
input_file = sphinx_victorykit_theme/locale/sphinx.pot
output_dir = sphinx_victorykit_theme/locale/

[update_catalog]
domain = sphinx
input_file = sphinx_victorykit_theme/locale/sphinx.pot
output_dir = sphinx_victorykit_theme/locale/

[compile_catalog]
domain = sphinx
directory = sphinx_victorykit_theme/locale/

